--- a/Knucklebones-Prototype-Info.plist
+++ b/Knucklebones-Prototype-Info.plist
@@ -6,5 +6,10 @@
 	<array>
 		<string>Piazzolla-VariableFont_opsz,wght.ttf</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIImageName</key>
+		<string>Splash</string>
+	</dict>
 </dict>
 </plist>
